# diary-push-bot-email

./: .env.example  .gitignore  README.md  pyproject.toml
src/diary_push_bot/: cli.py  config.py  diary_parser.py  mailer.py  runner.py  selector.py  state_store.py
tests/: test_diary_parser.py  test_runner.py
